# SpiceLab

./: .coverage 2  .coverage 3  .coverage 4  .coverage 5  .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITICAL_ANALYSIS.md  Makefile  README.md  TRANSFORMATION_SUMMARY.md  ci.yml  codecov.yml  dev-requirements.txt  docs-requirements.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  sim.raw  sitemap.xml  test.py  test_asc_loader.py  update.md
.github/: PULL_REQUEST_TEMPLATE.md
ac-measurements/: index.html
ac-stability/: index.html
api-reference/: index.html
cat/: __init__.py
changelog-m6/: index.html
cli-ci/: index.html
components/: index.html
components-library/: index.html
components-quickstart/: index.html
concepts/: index.html
cookbook/: index.html
core-contracts/: index.html
device-models/: index.html
docs/: ac-measurements.md  ac-stability.md  api-reference.md  behavioral_models.md  changelog-m6.md  cli-ci.md  common-pitfalls.md  component_catalog.md  components-library.md  components-quickstart.md  components.md  concepts.md  cookbook.md  core-contracts.md  device-models.md  doctor.md  engines.md  examples-gallery.md  examples-usage.md  examples.md  getting-started.md  ide_setup.md  index.md  installation.md  ltspice-import.md  m7-en.md  m7.md  monte-carlo-example.md  monte-carlo.md  mux-enable-ports.md  notebooks.md  opamp-stability.md  optimization.md  performance_baseline.md  plots.md  preview.md  reporting.md  sweeps-step.md  template_catalog.md  templates-reference.md  (+6 more)
doctor/: index.html
engines/: index.html
examples/: PT1000_circuit_1.asc  PT1000_circuit_1.cir  README.md  __init__.py  _common.py  ac_bode.py  ac_measurements_demo.py  adc_demo.py  analog_measurements_demo.py  analog_mux_demo.py  asc_converter_demo.py  asc_edit_and_run.py  asc_parser_demo.py  asc_simulation_demo.py  circuit_preview.py  circuit_validation_demo.py  closed_loop.py  components_gallery.py  controlled_sources.py  dc_sweep.py  dx_netlist_diff_demo.py  dx_templates_demo.py  dx_troubleshooting_demo.py  dx_validation_demo.py  engine_ac_demo.py  getting_started.py  import_ltspice_and_run.py  index.html  ltspice_schematic_roundtrip.py  mc_demo_plots.py  monte_carlo_demo.py  monte_carlo_df.py  monte_carlo_fig.py  monte_carlo_performance_demo.py  monte_carlo_rc.py  mux_enable_ports_demo.py  ngspice_ac_metrics.py  ngspice_middlebrook_loop_stability.py  ngspice_opamp_loop_stability.py  ngspice_tran_metrics.py  (+24 more)
examples-gallery/: index.html
examples-usage/: index.html
examples_output/: orchestrator_ac_metrics.csv
getting-started/: index.html
ide/: index.html
installation/: index.html
ltspice-import/: index.html
m7/: index.html
m7-en/: index.html
monte-carlo/: index.html
monte-carlo-example/: index.html
mux-enable-ports/: index.html
notebooks/: 01-getting-started.ipynb  02-engines-and-setup.ipynb  03-sweeps-and-grids.ipynb  04-monte-carlo.ipynb  05-visualization-and-widgets.ipynb  06-dsl-circuit-builder.ipynb  07-advanced-components.ipynb  M7_New_API_Features.ipynb  M7_Quickstart.ipynb  index.html
opamp-stability/: index.html
openspec/: AGENTS.md  ROADMAP.md  ROADMAP_STATUS.md  project.md
plots/: index.html
preview/: index.html
reporting/: index.html
search/: search_index.json
spicelab/: __init__.py  doctor.py  exceptions.py  orchestrator.py
sweeps-step/: index.html
tests/: benchmark_phase1.py  conftest.py  test_ac_with_ngspice 2.py  test_ac_with_ngspice.py  test_advanced_drc.py  test_analog_measurements.py  test_analysis_api_no_spice.py  test_analysis_error_reporting.py  test_analysis_types_components.py  test_asc_component_rotations.py  test_asc_converter.py  test_asc_parser.py  test_asc_pin_offsets.py  test_asc_transistors.py  test_cache.py  test_circuit_parameter.py  test_circuit_v2.py  (+95 more)
(+421 files in other folders)
