[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circuit-analysis-toolkit"
version = "0.1.0a0"
description = "PyCircuitKit (CAT): Modern, strongly-typed Python toolkit for SPICE circuit definition, simulation and analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name="Luiz Carlos Gili" }]
license = { text = "MIT" }
dependencies = ["numpy>=1.26", "pandas>=2.1", "typing-extensions>=4.9"]

[project.optional-dependencies]
opt = ["scipy>=1.12"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cat*"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings --cov=cat --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
lint.select = ["E","F","I","UP"]
format.quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
plugins = []

[tool.uv]
dev-dependencies = ["pytest","pytest-cov","mypy","ruff","hypothesis","pre-commit"]
